--- a/css/interface.css
+++ b/css/interface.css
@@ -1,8 +1,8 @@
 *, *:before, *:after {
-  box-sizing: border-box;
-     text-decoration: none;
-    list-style: none; }
-
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none; 
+    }
 body{ 
     font-family: 'Montserrat', sans-serif;
     color: #000000;
@@ -26,40 +26,18 @@ body{
 .text-center {
     text-align: center;
 }
-ul.tabs {
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-    text-transform: uppercase;
-}
-ul.tabs li {
-    background: none;
-    color: #222;
-    display: inline-block;
-    padding: 10px 15px;
-    cursor: pointer;
-}
-ul.tabs li.current {
-    background: #7dbcd1;
-    color: #fff;
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
-}
-.tab-content {
-    display: none;
-    border:4px solid #7dbcd1;
-    padding: 30px 15px;
-}
-.tab-content.current {
-    display: inherit;
-}
 table {
   width: 100%; 
   border-collapse: collapse; 
 }
-thead {
+ table:nth-child(1) {
+     text-align: left; 
+ }
+ tr:nth-child(1){
+    color:whitesmoke;
+ }
+thead{
   font-weight: 900;
-  color: #ffffff;
 }
 tr {
   background: #f6f6f6;
@@ -68,14 +46,22 @@ tr {
 tr:nth-of-type(odd) {
   background: #e9e9e9;
 }
+table tr:nth-child(1){
+    background: #7dbcd1;
+ }
 th, td{
 	padding: 4px 0px 4px 4px;
+    text-align: center;
+    font-weight: 500;
+}
+th, td:nth-child(1n+1){
+    text-align: left;
 }
 .btn {
     color:white; 
     background-color:#7dbcd1;
     font-size:15px;
-	font-weight:900;
+    font-weight:900;
     border:0px;
     text-transform: uppercase; 
     padding:8px 10px; 
@@ -90,8 +76,8 @@ th, td{
   border-color: #7dbcd1;
 }
 .navbar-brand {
-  color: #7dbcd1;
-  letter-spacing: 1px;
+    color: #7dbcd1;
+    letter-spacing: 1px;
     font-size: 23px;
     font-weight: 400;
 }
@@ -114,7 +100,6 @@ th, td{
 a {
     color:#7dbcd1;
     cursor: pointer;
-    border-bottom: 1px dotted; 
 }
 a:hover {
     color:#479eb5;
@@ -131,15 +116,20 @@ a:hover {
   line-height: 45px;
   text-align: center;
   cursor: pointer;
-  border: 1px solid;
-  background-color: #FFF;
-  margin-bottom: -1px;
-  margin-right: 5px; }
+  color:black;
+  margin-right: 5px; 
+  }
   .tab.is-active {
-    border-bottom: none; }
-
+    border-bottom: none; 
+    background: #7dbcd1;
+    }
 .tabContent {
-  border: 1px solid;
-  padding: 20px; }
-riot-typeahead {
-  display: block; }
+    border: 4px solid #7dbcd1;
+    padding: 20px;
+    margin: 0 10px 10px 10px;
+    }
+  li{
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    border-bottom: none;
+  }
