--- a/css/interface.css
+++ b/css/interface.css
@@ -1,21 +1,64 @@
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: border-box;
     text-decoration: none;
-    list-style: none; 
-    }
-body{ 
+    list-style: none;
+}
+body {
     font-family: 'Montserrat', sans-serif;
     color: #000000;
-    font-size:15px;
+    font-size: 15px;
     line-height: 1.5;
     margin: 0;
     padding: 0;
 }
-.fa-stack {
+a {
     color: #7dbcd1;
+    cursor: pointer;
 }
-.fa-stack:hover {
+a:hover {
     color: #479eb5;
+}
+ul {
+    padding-left: 10px;
+}
+li {
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    border-bottom: none;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #e9e9e9;
+}
+table:nth-child(1) {
+    text-align: left;
+}
+thead {
+    font-weight: 900;
+}
+tr {
+    background: #f6f6f6;
+    height: 29px;
+}
+tr:nth-of-type(odd) {
+    background: #e9e9e9;
+}
+th,
+td {
+    padding: 4px 8px;
+    text-align: center;
+    font-weight: 500;
+}
+th,
+td:nth-child(1n+1) {
+    text-align: left;
+}
+.container {
+    min-width: 770px;
+    margin: 10px 15px;
 }
 .text-right {
     text-align: right;
@@ -26,55 +69,6 @@ body{
 .text-center {
     text-align: center;
 }
-table {
-  width: 100%; 
-  border-collapse: collapse; 
-}
- table:nth-child(1) {
-     text-align: left; 
- }
- tr:nth-child(1){
-    color:whitesmoke;
- }
-thead{
-  font-weight: 900;
-}
-tr {
-  background: #f6f6f6;
-  height: 29px;
-}
-tr:nth-of-type(odd) {
-  background: #e9e9e9;
-}
-table tr:nth-child(1){
-    background: #7dbcd1;
- }
-th, td{
-	padding: 4px 0px 4px 4px;
-    text-align: center;
-    font-weight: 500;
-}
-th, td:nth-child(1n+1){
-    text-align: left;
-}
-.btn {
-    color:white; 
-    background-color:#7dbcd1;
-    font-size:15px;
-    font-weight:900;
-    border:0px;
-    text-transform: uppercase; 
-    padding:8px 10px; 
-    border-radius:5px;
-    margin-top:30px;
-}
-.btn:hover,
-.btn:active,
-.btn:focus {
-  color: white;
-  background-color: #479eb5;
-  border-color: #7dbcd1;
-}
 .navbar-brand {
     color: #7dbcd1;
     letter-spacing: 1px;
@@ -82,54 +76,69 @@ th, td:nth-child(1n+1){
     font-weight: 400;
 }
 .navbar-brand-small {
-    font-size:31px;
+    font-size: 31px;
     font-weight: 400;
+}
+.fa-stack {
+    color: #7dbcd1;
+}
+.fa-stack:hover {
+    color: #479eb5;
+}
+.header-row {
+    background: #7dbcd1;
+    color: whitesmoke;
+    padding: 0px 8px;
+}
+.btn {
+    color: white;
+    background-color: #7dbcd1;
+    font-size: 15px;
+    font-weight: 500;
+    border: 0px;
+    text-transform: uppercase;
+    padding: 8px 10px;
+    border-radius: 5px;
+    margin-top: 30px;
+}
+.btn:hover,
+.btn:active,
+.btn:focus {
+    color: white;
+    background-color: #479eb5;
+    border-color: #7dbcd1;
 }
 .app-info {
     padding: 25px 0px;
 }
-.container {
-    min-width: 770px;
+.copy {
+    margin-top: 100px;
+    margin-left: 15px;
 }
-.footer {
-    position : absolute;
-    bottom : 0;
-    height : 40px;
-    margin-top : 40px;
+.list--bare,
+.post__locations,
+.listing__comments {
+    margin: 0;
 }
-a {
-    color:#7dbcd1;
-    cursor: pointer;
-}
-a:hover {
-    color:#479eb5;
-}
-.list--bare, .post__locations, .listing__comments {
-  margin: 0;
-  }
-
 .tab {
-  display: inline-block;
-  vertical-align: middle;
-  width: 75px;
-  height: 45px;
-  line-height: 45px;
-  text-align: center;
-  cursor: pointer;
-  color:black;
-  margin-right: 5px; 
-  }
-  .tab.is-active {
-    border-bottom: none; 
+    display: inline-block;
+    vertical-align: middle;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    cursor: pointer;
+    color: black;
+    margin-right: 5px;
+    padding: 0px 10px;
+}
+.tab.is-active {
+    border-bottom: none;
+    color: white;
     background: #7dbcd1;
-    }
+}
 .tabContent {
     border: 4px solid #7dbcd1;
     padding: 20px;
     margin: 0 10px 10px 10px;
-    }
-  li{
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
-    border-bottom: none;
-  }
+    min-width: 1130px;
+}
